syntax = "proto3";
import "google/protobuf/empty.proto";
option go_package = "./;proto";

message User {
  int32 id = 1;
  string password = 2;
  string phone = 3;
  string name = 4;
  uint64 birthday = 5;
  string gender = 6;
  int32 role = 7;
}

service UserService {
  rpc ListUsers(ListUsersRequest) returns (ListUsersResponse);
  rpc GetUser(GetUserRequest) returns (User);
  rpc CreateUser(CreateUserRequest) returns (User);
}

message ListUsersRequest {
  uint32 pn = 1;
  uint32 pSize = 2;
}

message ListUsersResponse {
  int32 total = 1;
  repeated User users = 2;
}

message GetUserRequest {
  string phone = 1;
  string id = 2;
}

message CreateUserRequest {
  string phone = 1;
  string password = 2;
  string name = 3;
}